# HeLe_app

./: .gitignore  DirectoryV3.xml  README.md  l10n.yaml  pubspec.yaml
.fastRequest/config/: fastRequestCurrentProjectConfig.json  fastRequestCurrentProjectEnvironment.json
android/app/: build.gradle
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: Application.dart  init.dart  main.dart
lib/http/: bangumi_api.dart  bangumi_net.dart
lib/l10n/: app_en.arb  app_zh.arb  app_zh_CN.arb  app_zh_HK.arb  app_zh_TW.arb
lib/model/: calendar.dart  collection.dart  images.dart  infobox.dart  pagination.dart  rating.dart  stat.dart  tag.dart  wiki_detail.dart
lib/pages/: index.dart
lib/routes/: app_pages.dart  app_routes.dart  initial_binding.dart
lib/themes/: app_theme.dart
rust/: Cargo.toml
rust/src/: downloading.rs  exports.rs  frb_generated.io.rs  frb_generated.rs  frb_generated.web.rs  lib.rs  udto.rs  utils.rs
rust/src/api/: api.rs
rust/src/copy_client/: client.rs  lib.rs  mod.rs  tests.rs
rust/src/database/: mod.rs
rust/src/database/active/: comic_view_log.rs  local_collect.rs  mod.rs
rust/src/database/cache/: image_cache.rs  web_cache.rs
rust/src/database/download/: download_comic.rs  download_comic_chapter.rs  download_comic_group.rs  download_comic_page.rs  mod.rs
rust/src/database/properties/: property.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_hele_app.podspec
test/: widget_test.dart
(+170 files in other folders)
