[package]
name = "rust_lib_kobi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.1.0"
anyhow = "1.0.86"
async_once = "0.2.6"
base64 = "0.22.1"
bytes = "1.7.1"
chrono = { version = "0.4.38", features = ["serde"] }
futures-util = "0.3.30"
hex = "0.4.3"
image = { version = "0.25.2", features = ["jpeg", "gif", "webp", "bmp", "png"] }
itertools = "0.13.0"
lazy_static = "1.5.0"
libc = "0.2.155"
md5 = "0.7.0"
num-iter = "0.1.45"
once_cell = "1.19.0"
prost = "0.13.1"
prost-types = "0.13.1"
regex = "1.10.6"
rsa = "0.10.0-pre.2"
serde = "1.0.204"
serde_derive = "1.0.204"
serde_json = "1.0.122"
serde_path_to_error = "0.1.16"
tokio = { version = "1.39.2", features = ["full"] }
reqwest = { version = "0.12.2", features = ["rustls-tls", "socks"], default-features = false }
sea-orm = { version = "1.0.0", features = ["sqlx-sqlite", "macros", "runtime-tokio-rustls"], default-features = false }
linked-hash-map = { version = "0.5.6", features = ["serde", "serde_impl"] }
url = "2.5.2"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
rand = "0.9.0-alpha.2"
async_zip = { version = "0.0.17", features = ["full", "tokio-util", "tokio", "tokio-fs", "async-compression"] }
async-trait = "0.1.81"
